fix archive scrollbar ui

--- a/src/styles/components/_archive.scss
+++ b/src/styles/components/_archive.scss
@@ -27,7 +27,7 @@
   left: 110px;
   z-index: 1000;
   background-color: var(--background-archive, #f6f6f6);
-  padding: 2rem 1rem 1.5rem;
+  padding-top: 2rem;
   border-radius: 5px;
   box-shadow: 1px 1px 5px 1px var(--column-shadow, #999);
   font-size: 1.4rem;
@@ -52,6 +52,12 @@
   &__body {
     background-color: #eae8ed;
     opacity: 0.95;
+  }
+
+  &__content {
+    padding-left: 1rem;
+    padding-right: 1rem;
+    margin-top: 1rem;
   }
 
   &__button {
